Add a large set of start arguments